--- a/about.html
+++ b/about.html
@@ -1,146 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Little Paradise | About</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
-        integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
-</head>
-
-<body>
-    <header>
-
-        <nav class="navbar navbar-light navbar-expand-md fixed-top">
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <title>Little Paradise | About</title>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+         integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link rel="stylesheet" href="assets/css/style.css">
+      <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
+   </head>
+   <body>
+      <header>
+         <nav class="navbar navbar-light navbar-expand-md fixed-top">
             <a href="index.html" class="navbar-brand">Little Paradise</a>
-
             <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+               aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
             </button>
-
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav mx-auto" id="navigation-links">
-                    <li class="nav-item mr-2">
-                        <a href="index.html#tour-dates" class="nav-link">Tour</a>
-                    </li>
-                    <li class="nav-item mr-2">
-                        <a href="music.html" class="nav-link">Music</a>
-                    </li>
-                    <li class="nav-item mr-2">
-                        <a href="gallery.html" class="nav-link">Gallery</a>
-                    </li>
-                    <li class="nav-item mr-2">
-                        <a href="about.html" class="nav-link active">About</a>
-                    </li>
-                    <li class="nav-item mr-2">
-                        <a href="contact.html" class="nav-link">Contact</a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav ml-auto flex-row" id="social-links">
-                    <li class="nav-item mr-2">
-                        <a href="http://www.facebook.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
-                    </li>
-                    <li class="nav-item mr-2">
-                        <a href="http://www.youtube.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-youtube" aria-hidden="true"></i><span class="sr-only">Youtube</span></a>
-                    </li>
-                    <li class="nav-item mr-2">
-                        <a href="http://www.instagram.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-instagram" aria-hidden="true"></i><span class="sr-only">Instagram</span></a>
-                    </li>
-                    <li class="nav-item mr-2">
-                        <a href="http://www.soundcloud.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-soundcloud" aria-hidden="true"></i><span class="sr-only">Soundcloud</span></a>
-                    </li>
-                </ul>
+               <ul class="navbar-nav mx-auto" id="navigation-links">
+                  <li class="nav-item mr-2">
+                     <a href="index.html#tour-dates" class="nav-link">Tour</a>
+                  </li>
+                  <li class="nav-item mr-2">
+                     <a href="music.html" class="nav-link">Music</a>
+                  </li>
+                  <li class="nav-item mr-2">
+                     <a href="gallery.html" class="nav-link">Gallery</a>
+                  </li>
+                  <li class="nav-item mr-2">
+                     <a href="about.html" class="nav-link active">About</a>
+                  </li>
+                  <li class="nav-item mr-2">
+                     <a href="contact.html" class="nav-link">Contact</a>
+                  </li>
+               </ul>
+               <ul class="navbar-nav ml-auto flex-row" id="social-links">
+                  <li class="nav-item mr-2">
+                     <a href="http://www.facebook.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
+                  </li>
+                  <li class="nav-item mr-2">
+                     <a href="http://www.youtube.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-youtube" aria-hidden="true"></i><span class="sr-only">Youtube</span></a>
+                  </li>
+                  <li class="nav-item mr-2">
+                     <a href="http://www.instagram.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-instagram" aria-hidden="true"></i><span class="sr-only">Instagram</span></a>
+                  </li>
+                  <li class="nav-item mr-2">
+                     <a href="http://www.soundcloud.com/" target="_blank" class="nav-link" rel="external"><i class="fab fa-soundcloud" aria-hidden="true"></i><span class="sr-only">Soundcloud</span></a>
+                  </li>
+               </ul>
             </div>
-        </nav>
-
-    </header>
-
-    <h1 class="appear-first">About</h1>
-
-    <section class="container appear-second" id="about-section">
-        <div class="row">
+         </nav>
+      </header>
+      <h1 class="appear-first">About</h1>
+      <section class="container appear-second" id="about-section">
+         <div class="row">
             <div class="col-lg-7">
-                <img src="assets/images/littleparadisesign.jpg" alt="Little Paradise BS3 road sign" class="img-fluid about-image">
-                <img src="assets/images/fran.jpg" alt="Fran sat down in the recording studio" class="img-fluid disappear about-image"> 
+               <img src="assets/images/littleparadisesign.jpg" alt="Little Paradise BS3 road sign" class="img-fluid about-image">
+               <img src="assets/images/fran.jpg" alt="Fran sat down in the recording studio" class="img-fluid disappear about-image"> 
             </div>
             <div class="col-lg-5">
-                <article>
-                    <p>Little Paradise are an indie rock band from Bristol comprising of two hip twenty-somethings: Mike
-                        Kilcooley and Francis Kershaw.</p>
-                    <p>
-                        Formed during the closing months of 2019, the band mixes dueling electric guitars with
-                        aggressive drums, and record all of their songs from a small DIY bedroom studio in Southville.
-                        In the band's own words, their sound can be described as a sincere yet futile attempt
-                        to pretend that music fans still like early Bloc Party or Foals as much as they do.
-                    </p>
-                    <p>
-                        The unrelenting apocalyptic hellscape that was 2020 could have ended this musical endeavour
-                        before it even began. 
-                        However, armed with a can-do attitude and a digital audio workstation, Little Paradise found 
-                        opportunity in the musical void to take stock and work out what direction they should push 
-                        the rock genre in.
-                        The conclusion they reached was to remain firmly in 2005, record as much material as possible,
-                        and pray that people will soon feel the same nostalgia for the noughties that is inexplicably
-                        directed towards the 80s and 90s - at which point they will aggressively cash in.
-                    </p>
-                    <hr>
-                    <aside>
-                        <p><em>If you'd like to get in touch with the band for any reason at all, be it for potential gig
+               <article>
+                  <p>Little Paradise are an indie rock band from Bristol comprising of two hip twenty-somethings: Mike
+                     Kilcooley and Francis Kershaw.
+                  </p>
+                  <p>
+                     Formed during the closing months of 2019, the band mixes dueling electric guitars with
+                     aggressive drums, and record all of their songs from a small DIY bedroom studio in Southville.
+                     In the band's own words, their sound can be described as a sincere yet futile attempt
+                     to pretend that music fans still like early Bloc Party or Foals as much as they do.
+                  </p>
+                  <p>
+                     The unrelenting apocalyptic hellscape that was 2020 could have ended this musical endeavour
+                     before it even began. 
+                     However, armed with a can-do attitude and a digital audio workstation, Little Paradise found 
+                     opportunity in the musical void to take stock and work out what direction they should push 
+                     the rock genre in.
+                     The conclusion they reached was to remain firmly in 2005, record as much material as possible,
+                     and pray that people will soon feel the same nostalgia for the noughties that is inexplicably
+                     directed towards the 80s and 90s - at which point they will aggressively cash in.
+                  </p>
+                  <hr>
+                  <aside>
+                     <p><em>If you'd like to get in touch with the band for any reason at all, be it for potential gig
                         opportunities, collaborations or just to say something nice, you can find contact details <a
-                            href="contact.html">here</a>.
-                        </em></p>
-                        <p><em>Upcoming tour dates (when there are any at all to speak of) can be found <a
-                            href="index.html#tour-dates">here.</a></em></p>
-                    </aside>
-
-                </article>
-            </div>       
-            <div class="col d-lg-none d-md-block">
-                <img src="assets/images/fran.jpg" alt="Fran sat down in the recording studio" class="img-fluid about-image">   
+                           href="contact.html">here</a>.
+                        </em>
+                     </p>
+                     <p><em>Upcoming tour dates (when there are any at all to speak of) can be found <a
+                        href="index.html#tour-dates">here.</a></em></p>
+                  </aside>
+               </article>
             </div>
-        </div>
-    </section>
-
-    <footer class="page-footer">
-        <div>
+            <div class="col d-lg-none d-md-block">
+               <img src="assets/images/fran.jpg" alt="Fran sat down in the recording studio" class="img-fluid about-image">   
+            </div>
+         </div>
+      </section>
+      <footer class="page-footer">
+         <div>
             <h4 id="footer-heading"><a href="index.html">Little Paradise</a></h4>
             <ul id="footer-social" class="page-footer">
-                <li>
-                    <a href="http://www.facebook.com/" target="_blank" rel="external"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
-                </li>
-                <li>
-                    <a href="http://www.youtube.com/" target="_blank" rel="external"><i class="fab fa-youtube" aria-hidden="true"></i><span class="sr-only">Youtube</span></a>
-                </li>
-                <li>
-                    <a href="http://www.instagram.com/" target="_blank" rel="external"><i class="fab fa-instagram" aria-hidden="true"></i><span class="sr-only">Instagram</span></a>
-                </li>
-                <li>
-                    <a href="http://www.soundcloud.com/" target="_blank" rel="external"><i class="fab fa-soundcloud" aria-hidden="true"></i><span class="sr-only">Soundcloud</span></a>
-                </li>
+               <li>
+                  <a href="http://www.facebook.com/" target="_blank" rel="external"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
+               </li>
+               <li>
+                  <a href="http://www.youtube.com/" target="_blank" rel="external"><i class="fab fa-youtube" aria-hidden="true"></i><span class="sr-only">Youtube</span></a>
+               </li>
+               <li>
+                  <a href="http://www.instagram.com/" target="_blank" rel="external"><i class="fab fa-instagram" aria-hidden="true"></i><span class="sr-only">Instagram</span></a>
+               </li>
+               <li>
+                  <a href="http://www.soundcloud.com/" target="_blank" rel="external"><i class="fab fa-soundcloud" aria-hidden="true"></i><span class="sr-only">Soundcloud</span></a>
+               </li>
             </ul>
-        </div>
-    </footer>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous"></script>
-
-</body>
-
+         </div>
+      </footer>
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+         crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+         crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+         crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+         crossorigin="anonymous"></script>
+   </body>
 </html>
