--- a/music.html
+++ b/music.html
@@ -1,147 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Little Paradise | Music</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
-        integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
-</head>
-
-<body>
-    <header>
-
-        <nav class="navbar navbar-light navbar-expand-md fixed-top">
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <title>Little Paradise | Music</title>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+         integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="assets/css/style.css">
+   </head>
+   <body>
+      <header>
+         <nav class="navbar navbar-light navbar-expand-md fixed-top">
             <a href="index.html" class="navbar-brand">Little Paradise</a>
-
             <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+               aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
             </button>
-
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav mx-auto" id="navigation-links">
-                    <li class="nav-item mr-2">
-                        <a href="index.html#tour-dates" class="nav-link">Tour</a>
-                    </li>
-                    <li class="nav-item mr-2 active">
-                        <a href="music.html" class="nav-link">Music</a>
-                    </li>
-                    <li class="nav-item mr-2">
-                        <a href="gallery.html" class="nav-link">Gallery</a>
-                    </li>
-                    <li class="nav-item mr-2">
-                        <a href="about.html" class="nav-link">About</a>
-                    </li>
-                    <li class="nav-item mr-2">
-                        <a href="contact.html" class="nav-link">Contact</a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav ml-auto flex-row" id="social-links">
-                    <li class="nav-item mr-2">
-                        <a href="http://www.facebook.com/" target="_blank" rel="external" class="nav-link"><i class="fab fa-facebook"></i><span class="sr-only">Facebook</span></a>
-                    </li>
-                    <li class="nav-item mr-2">
-                        <a href="http://www.youtube.com/" target="_blank" rel="external" class="nav-link"><i class="fab fa-youtube"></i><span class="sr-only">Youtube</span></a>
-                    </li>
-                    <li class="nav-item mr-2">
-                        <a href="http://www.instagram.com/" target="_blank" rel="external" class="nav-link"><i class="fab fa-instagram"></i><span class="sr-only">Instagram</span></a>
-                    </li>
-                    <li class="nav-item mr-2">
-                        <a href="http://www.soundcloud.com/" target="_blank" rel="external" class="nav-link"><i class="fab fa-soundcloud"></i><span class="sr-only">Soundcloud</span></a>
-                    </li>
-                </ul>
+               <ul class="navbar-nav mx-auto" id="navigation-links">
+                  <li class="nav-item mr-2">
+                     <a href="index.html#tour-dates" class="nav-link">Tour</a>
+                  </li>
+                  <li class="nav-item mr-2 active">
+                     <a href="music.html" class="nav-link">Music</a>
+                  </li>
+                  <li class="nav-item mr-2">
+                     <a href="gallery.html" class="nav-link">Gallery</a>
+                  </li>
+                  <li class="nav-item mr-2">
+                     <a href="about.html" class="nav-link">About</a>
+                  </li>
+                  <li class="nav-item mr-2">
+                     <a href="contact.html" class="nav-link">Contact</a>
+                  </li>
+               </ul>
+               <ul class="navbar-nav ml-auto flex-row" id="social-links">
+                  <li class="nav-item mr-2">
+                     <a href="http://www.facebook.com/" target="_blank" rel="external" class="nav-link"><i class="fab fa-facebook"></i><span class="sr-only">Facebook</span></a>
+                  </li>
+                  <li class="nav-item mr-2">
+                     <a href="http://www.youtube.com/" target="_blank" rel="external" class="nav-link"><i class="fab fa-youtube"></i><span class="sr-only">Youtube</span></a>
+                  </li>
+                  <li class="nav-item mr-2">
+                     <a href="http://www.instagram.com/" target="_blank" rel="external" class="nav-link"><i class="fab fa-instagram"></i><span class="sr-only">Instagram</span></a>
+                  </li>
+                  <li class="nav-item mr-2">
+                     <a href="http://www.soundcloud.com/" target="_blank" rel="external" class="nav-link"><i class="fab fa-soundcloud"></i><span class="sr-only">Soundcloud</span></a>
+                  </li>
+               </ul>
             </div>
-        </nav>
-
-    </header>
-
-    <h1 class="appear-first">Music</h1>
-
-    <section class="music-content appear-second container">
-        <h2 class="music-heading">SoundCloud <a href="https://www.soundcloud.com" target="_blank"><i class="fab fa-soundcloud" id="soundcloud-logo" aria-hidden="true"></i><span class="sr-only">Soundcloud</span></a></h2>
-        
-            <div class="row">
-                <div class="col-lg-2 col-xl-1"></div>
-                <div class="col-lg-8 col-xl-10">
-                    <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay"
-                    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1189324765&color=%23d85656&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-                    <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
-                </div>
-                <div class="col-lg-2 col-xl-1"></div>
-            </div>  
-    </section>
-
-    <section class="music-content appear-second container">
-        <h2 class="music-heading">YouTube <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube" id="youtube-logo" aria-hidden="true"></i><span class="sr-only">Youtube</span></a></h2>
-            <div class="row">
-                <div class="col-lg-2"></div>
-                <div class="col-lg-8"><iframe class="youtube-iframe" src="https://www.youtube.com/embed/ryyKCIndge0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-                <p>Your device does not support iframes</p></iframe></div>
-                <div class="col-lg-2"></div>
+         </nav>
+      </header>
+      <h1 class="appear-first">Music</h1>
+      <section class="music-content appear-second container">
+         <h2 class="music-heading">SoundCloud <a href="https://www.soundcloud.com" target="_blank"><i class="fab fa-soundcloud" id="soundcloud-logo" aria-hidden="true"></i><span class="sr-only">Soundcloud</span></a></h2>
+         <div class="row">
+            <div class="col-lg-2 col-xl-1"></div>
+            <div class="col-lg-8 col-xl-10">
+               <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay"
+                  src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1189324765&color=%23d85656&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+               <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"></div>
             </div>
-    </section>
-
-    <section class="container music-content appear-second" id="release-section">
-        <h2 class="music-heading">Releases <i class="fas fa-compact-disc" aria-hidden="true"></i><span class="sr-only">CD</span></h2>
-        <div class="row">
-
+            <div class="col-lg-2 col-xl-1"></div>
+         </div>
+      </section>
+      <section class="music-content appear-second container">
+         <h2 class="music-heading">YouTube <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube" id="youtube-logo" aria-hidden="true"></i><span class="sr-only">Youtube</span></a></h2>
+         <div class="row">
+            <div class="col-lg-2"></div>
+            <div class="col-lg-8">
+               <iframe class="youtube-iframe" src="https://www.youtube.com/embed/ryyKCIndge0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                  <p>Your device does not support iframes</p>
+               </iframe>
+            </div>
+            <div class="col-lg-2"></div>
+         </div>
+      </section>
+      <section class="container music-content appear-second" id="release-section">
+         <h2 class="music-heading">Releases <i class="fas fa-compact-disc" aria-hidden="true"></i><span class="sr-only">CD</span></h2>
+         <div class="row">
             <div class="col-12">
-                <div class="card mx-auto" style="width: 18rem;">
-                    <a href="https//www.bandcamp.com"><img src="assets/images/hero-image-min.jpg" class="card-img-top"
-                            alt="Little Paradise EP purchase link"></a>
-                    <div class="card-body">
-                        <h3 class="text-center">Little Paradise EP</h3>
-                        <p class="card-text text-center">(2021)</p>
-                        <a class="btn btn-primary btn-lg justify-content-center" id="buy-now" href="http://www.oddsocks.bandcamp.com/" role="button">Buy
-                            Now</a>
-                    </div>
-                </div>
+               <div class="card mx-auto" style="width: 18rem;">
+                  <a href="https//www.bandcamp.com"><img src="assets/images/hero-image-min.jpg" class="card-img-top"
+                     alt="Little Paradise EP purchase link"></a>
+                  <div class="card-body">
+                     <h3 class="text-center">Little Paradise EP</h3>
+                     <p class="card-text text-center">(2021)</p>
+                     <a class="btn btn-primary btn-lg justify-content-center" id="buy-now" href="http://www.oddsocks.bandcamp.com/" role="button">Buy
+                     Now</a>
+                  </div>
+               </div>
             </div>
-
-        </div>
-
-    </section>
-  
-    <footer class="page-footer">
-        <div>
+         </div>
+      </section>
+      <footer class="page-footer">
+         <div>
             <h4 id="footer-heading"><a href="index.html">Little Paradise</a></h4>
             <ul id="footer-social" class="page-footer">
-                <li>
-                    <a href="http://www.facebook.com/" target="_blank" rel="external"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
-                </li>
-                <li>
-                    <a href="http://www.youtube.com/" target="_blank" rel="external"><i class="fab fa-youtube" aria-hidden="true"></i><span class="sr-only">Youtube</span></a>
-                </li>
-                <li>
-                    <a href="http://www.instagram.com/" target="_blank" rel="external"><i class="fab fa-instagram" aria-hidden="true"></i><span class="sr-only">Instagram</span></a>
-                </li>
-                <li>
-                    <a href="http://www.soundcloud.com/" target="_blank" rel="external"><i class="fab fa-soundcloud" aria-hidden="true"></i><span class="sr-only">Soundcloud</span></a>
-                </li>
+               <li>
+                  <a href="http://www.facebook.com/" target="_blank" rel="external"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
+               </li>
+               <li>
+                  <a href="http://www.youtube.com/" target="_blank" rel="external"><i class="fab fa-youtube" aria-hidden="true"></i><span class="sr-only">Youtube</span></a>
+               </li>
+               <li>
+                  <a href="http://www.instagram.com/" target="_blank" rel="external"><i class="fab fa-instagram" aria-hidden="true"></i><span class="sr-only">Instagram</span></a>
+               </li>
+               <li>
+                  <a href="http://www.soundcloud.com/" target="_blank" rel="external"><i class="fab fa-soundcloud" aria-hidden="true"></i><span class="sr-only">Soundcloud</span></a>
+               </li>
             </ul>
-        </div>
-    </footer>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous"></script>
-
-</body>
-
+         </div>
+      </footer>
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+         crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+         crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+         crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+         crossorigin="anonymous"></script>
+   </body>
 </html>
