add cta buttons on about page

--- a/about.html
+++ b/about.html
@@ -83,15 +83,20 @@
                      and pray that people will soon feel the same nostalgia for the noughties that is inexplicably
                      directed towards the 80s and 90s - at which point they will aggressively cash in.
                   </p>
-                  <hr>
                   <aside>
-                     <p><em>If you'd like to get in touch with the band for any reason at all, be it for potential gig
-                        opportunities, collaborations or just to say something nice, you can find contact details <a
-                           href="contact.html">here</a>.
-                        </em>
-                     </p>
-                     <p><em>Upcoming tour dates (when there are any at all to speak of) can be found <a
-                        href="index.html#tour-dates">here.</a></em></p>
+                     <hr>
+                     <div class="container">
+                        <div class="row">
+                           <div class="col about-cta">
+                              <p><em>Contact us:</em></p>
+                              <a class="btn btn-primary btn-lg about-button" href="contact.html" role="button">Contact</a>
+                           </div>
+                           <div class="col about-cta">
+                              <p><em>Live shows:</em></p>
+                              <a class="btn btn-primary btn-lg about-button" href="index.html#tour-dates" role="button">Tour</a>  
+                           </div>
+                        </div>
+                     </div>
                   </aside>
                </article>
             </div>
