--- a/about.html
+++ b/about.html
@@ -136,5 +136,11 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
          integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
          crossorigin="anonymous"></script>
+         <script>
+        $('.navbar-collapse a').click(function(){
+            $(".navbar-collapse").collapse('hide');
+        });
+    </script>
+    <!-- Code snippet from https://mdbootstrap.com/support/general/auto-close-navbar-when-click-on-link-responsive-mode/ -->
    </body>
 </html>
