fix: bug on music cta at smaller screen sizes

--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
          </div>
       </section>
       <hr>
-      <section class="container appear-third max-width-reduce" id="index-music">
+      <section class="container appear-third" id="index-music">
          <div class="alt-font">
             <h3 class="index-header">Latest Video</h3>
             <div class="row">
                <div class="col-lg-2 d-none d-lg-block"></div>
-               <div class="col-lg-8 youtube-iframe">
+               <div class="col-lg-8" id="index-youtube">
                   <iframe class="youtube-iframe"
                      src="https://www.youtube.com/embed/ryyKCIndge0" frameborder="0"
                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -104,6 +104,7 @@
                <div class="col-lg-2 d-none d-lg-block"></div>
             </div>
          </div>
+         <div class="max-width-reduce container">
          <div class="row music-alert">
             <div class="col-sm-2 col-md-3 col-lg-4 d-none d-sm-block"></div>
             <div class="col-12 col-sm-8 col-md-6 col-lg-4 cta" id="music-cta">
@@ -111,6 +112,7 @@
                <a id="listen" class="btn btn-primary btn-lg" href="music.html" role="button">Listen</a>
             </div>
             <div class="col-sm-2 col-md-3 col-lg-4 d-none d-sm-block"></div>
+         </div>
          </div>
       </section>
       <hr>
